# blog

./: .gitignore  .gitmodules  .htmlvalidate.json  .pdm-python  .pre-commit-config.yaml  .prettierrc  .project.yaml  Makefile  Pipfile  README.md  WORKFLOW_IDEAS.md  audit_report.md  blog_render.sh  config.toml  develop_server.sh  fix-push-to-github.sh  npm_scripts_guide.md  package-lock.json  package.json  pelicanconf-flex.py  pelicanconf-w3-orig.py  pelicanconf.py  plugin_list.txt  publishconf.py  pyproject.toml  readme.txt  reqs-freeze.txt  requirements-notebook.txt  requirements.txt  requirements_pinned.txt  seo_report.html  stellar_plot-plotly.ipynb  tst.html  ttst.html
.factory/: mcp.json
_resources/: favicon.xcf
content/: ads.txt  frontmatter.json
content/drafts/: darwin-approach-to-travelling-salesman.md  jupyter-notebook-extensions-useful-for-machine-learning.md  parallel-machine-learning-with-dask.md  pylint-for-gitlab-workflow.md  text_generator.md  what-is-inside-kaggle-docker-image.md
content/pages/: about.md  landing-page-about-me.md
content/posts/: 2018-03-22-top-ranked-zsh-plugins.md  2018-03-26-blockchain-implementation.ipynb  2018-03-26-blockchain-implementation.nbdata  2018-04-05-whats_cooking_NLP.ipynb  2018-04-05-whats_cooking_NLP.nbdata  2019-01-05-how-to-organize-data-science-project.md  2019-01-12-darwin-approach-to-travelling-salesman.md  2019-01-17-how-to-install-tensorflow-and-keras-on-windows-10.md  2019-02-16-kaggle-metrics_regression.md  2019-07-09-learn_bayesian_methods_in_4_steps_by_reading_and_by_doing.md  2019-07-09-train-dev-test-split-for-time-series-data.md  2019-07-14-top_cli_tools_2019.md  2019-08-10-spy-catch.ipynb  2019-08-10-spy-catch.nbdata  2019-08-23-cli-toolbelt-for-datascience-1.md  2019-08-23-cli-toolbelt-for-datascience.md  2020-01-31-finding_errors_in_data_data_validation.md  2021-11-28-top-ranked-zsh-plugins-2021.md  2021-11-30-datasets-for-sentiment-analysis.md  2022-01-21-how-to-get-most-of-github-copilot-in-2022.md  2022-02-11-pre-ocr-deskewing-and-dewarping-tools.md  2022-06-05-lesser-known-backtesting-libraries.md  2022-06-05-popular-backtesting-libraries.md  2022-08-31-best-self-hosted-rss-feeds-2022.md  2022-09-12-automated-trend-detection-and-segmentation.md  2023-01-06-lesser_known_yet_powerful_python_plotting_libraries.md  2023-01-11-visual-text-exploration-as-part-of-preprocessing-before-classification.md  2023-01-12-MLOps_roles_of_the_future.md  2023-01-12-is_mlops_good_career.md  2023-01-12-questions_for_mlops_engineer job_interview.md  2023-01-12-roles_in_mlops.md  2023-01-13-mlops_certifications.md  2023-01-13-setup_vscode_as_nim_ide.md  2023-01-17-are_green_and_blue_deployment_useful_for_mlops_practice.md  2023-01-17-micro_macro_averages_multilabel_multiclass.md  about.md  blockchain-implementation.ipynb  blockchain-implementation.ipynb-meta  blockchain-implementation.md  blockchain-implementation.nbdata  (+26 more)
content/posts/notebooks/2021-09-13-Interactive_plots_for_blogging/: 2021-09-13-Interactive_plots_for_blogging.ipynb  2021-09-13-Interactive_plots_for_blogging.ipynb.bak  2021-09-13-Interactive_plots_for_blogging.nbdata  plotly_graph.html  pyproject.toml
content/posts/notebooks/2026-01-08-ragas-in-mlfow-rag-eval-demo/: .env_template  .gitignore  2026_01_08_ragas_in_mlfow_rag_eval_demo.ipynb  2026_01_08_ragas_in_mlfow_rag_eval_demo.long.ipynb.bak  2026_01_08_ragas_in_mlfow_rag_eval_demo.nbdata  linkedin-posts.md  pyproject.toml
content/posts/notebooks/2026-01-08-ragas-in-mlfow-rag-eval-demo/data/: golden_dataset.json  knowledge_base.json  verify_dataset.py
content/posts/notebooks/2026-01-08-ragas-in-mlfow-rag-eval-demo/docs/: mlflow-ragas-without-tracing.md
content/styles/: custom.css
docs/: 404.html  CNAME  archives.html  categories.html  index.html  index.xml  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html  index8.html  index9.html  sitemap.xml  tags.html  til.html
docs/10-problems-with-Langchain-and-how-to-minimize-their-impact/: index.html
docs/10-scikit-learn-exercises-for-aspiring-data-scientists/: index.html
docs/50 questions for MLOps engineer job interview/: index.html
docs/50 questions for MLOps-engineer-job-interview/: index.html
docs/50-questions-for-MLOps-engineer-job-interview/: index.html
docs/Boosting Productivity and Automation with AppleScript on macOS/: index.html
docs/Create Self-Hosted Python Package Repository/: index.html
docs/Git-change-remote-origin-replace-with-new/: index.html
docs/How-to-use-Polish-wordnet-in-python/: index.html
docs/Rank-fusion-algorithms-from-simple-to-advanced/: index.html
docs/about-me/: index.html
docs/activitypub-how-it-works-how-to-use-it/: index.html
docs/add-logo-to-notebook-header/: index.html
docs/add-vscode-to-path/: index.html
docs/allow-arbitrary-types-pandas-in-pydantic/: index.html
docs/allow-arbitrary-types-pandasa-in-pydantic/: index.html
docs/alternatives-to-apache-airflow/: index.html
docs/alternatives_for_building_python_cli_apps/: index.html
docs/anchor-explanations/: index.html
docs/append-json-data-to-file-save-traces/: index.html
docs/are-lime-explanations-any-useful/: index.html
docs/asyncio-basics-async-await-when-to-use/: index.html
docs/awk/: index.html
helpers/: 2022-01-11-grammar-of-graphics.ipynb  Untitled.ipynb  attacking_differentia_privacy.ipynb  box-cox.ipynb  box-cox.py  export_table_to_markdown.ipynb  ffmpeg_animated_gif_preparation_tool.ipynb  grammar_of_graphics.ipynb  model_error.ipynb  plot_histogram_altair.py  stellar_plot_matplotlib.ipynb  tsne_snippet.ipynb
obsidian-templates/: blog-article.md  note.md
old_conf/: pelicanconf-flex.py  pelicanconf-w3.py  publishconf-flex.py
output/: archives.html  categories.html  index.html  tags.html
pelican-plugins/: ipynb  neighbors  pelican-ipynb  post_stats  readtime  related_posts  representative_image  similar_posts  tag_cloud  tipue_search
pelican-themes/: my-w3-personal-blog
scripts/: fix_duplicate_ids.py  generate_summaries.py  remove_anchor_ids.py
tests/: test_fix_yaml_tags.py
(+12180 files in other folders)
