[project]
name = "blog"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Krystian Safjan", email = "ksafjan@gmail.com"},
]
dependencies = [
    "anyio==4.2.0",
    "anytree==2.12.1",
    "appnope==0.1.3",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "astroid==3.0.2",
    "asttokens==2.4.1",
    "async-lru==2.0.4",
    "attrs==23.1.0",
    "Babel==2.14.0",
    "beautifulsoup4==4.12.2",
    "bleach==6.1.0",
    "blinker==1.7.0",
    "certifi==2023.11.17",
    "cffi==1.16.0",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "comm==0.2.0",
    "debugpy==1.8.0",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "dill==0.3.7",
    "docopt==0.6.2",
    "docutils==0.20.1",
    "exceptiongroup==1.2.0",
    "executing==2.0.1",
    "fastjsonschema==2.19.0",
    "feedgenerator==2.1.0",
    "fqdn==1.5.1",
    "h11==0.14.0",
    "httpcore==1.0.4",
    "httpx==0.27.0",
    "idna==3.6",
    "ipykernel==6.28.0",
    "ipython==8.19.0",
    "isoduration==20.11.0",
    "isort==5.13.2",
    "jedi==0.19.1",
    "Jinja2==3.1.3",
    "json5==0.9.14",
    "jsonpointer==2.4",
    "jsonschema==4.20.0",
    "jsonschema-specifications==2023.12.1",
    "jupyter-events==0.9.0",
    "jupyter-lsp==2.2.1",
    "jupyter-client==8.6.0",
    "jupyter-core==5.6.0",
    "jupyter-server==2.12.1",
    "jupyter-server-terminals==0.5.1",
    "jupyterlab==4.1.2",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.25.2",
    "Markdown==3.5.1",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.3",
    "matplotlib-inline==0.1.6",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "mistune==3.0.2",
    "nbclient==0.9.0",
    "nbconvert==7.13.1",
    "nbformat==5.9.2",
    "nest-asyncio==1.5.8",
    "notebook==7.1.0",
    "notebook-shim==0.2.3",
    "ordered-set==4.1.0",
    "overrides==7.4.0",
    "packaging==23.2",
    "pandocfilters==1.5.0",
    "parso==0.8.3",
    "pelican==4.9.1",
    "pelican-jupyter @ git+https://github.com/lextoumbourou/pelican-jupyter@bb1e2307e720fcacae23841527250785d6c5b9bc",
    "pelican-obsidian @ git+https://github.com/izikeros/pelican-obsidian@713155012bc0778994933a69908104cc985ccb39",
    "pelican-render-math>=1.0.4",
    "pelican-share-post>=1.1.0",
    "pexpect==4.9.0",
    "pipdeptree==2.13.1",
    "pipreqs==0.4.13",
    "platformdirs==4.1.0",
    "prometheus-client==0.19.0",
    "prompt-toolkit==3.0.43",
    "psutil==5.9.7",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "pycparser==2.21",
    "Pygments==2.17.2",
    "pylint==3.0.3",
    "Pyment==0.3.3",
    "python-dateutil==2.8.2",
    "python-json-logger==2.0.7",
    "pytz==2023.3.post1",
    "PyYAML==6.0.1",
    "pyzmq==25.1.2",
    "referencing==0.32.0",
    "requests==2.31.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==13.7.0",
    "rpds-py==0.15.2",
    "Send2Trash==1.8.2",
    "six==1.16.0",
    "smartypants==2.0.1",
    "sniffio==1.3.0",
    "soupsieve==2.5",
    "stack-data==0.6.3",
    "terminado==0.18.0",
    "tinycss2==1.2.1",
    "tomli==2.0.1",
    "tomlkit==0.12.3",
    "tornado==6.4",
    "traitlets==5.14.0",
    "types-python-dateutil==2.8.19.14",
    "typing-extensions==4.9.0",
    "typogrify==2.0.7",
    "Unidecode==1.3.7",
    "uri-template==1.3.0",
    "urllib3==2.1.0",
    "watchfiles==0.21.0",
    "wcwidth==0.2.12",
    "webcolors==1.13",
    "webencodings==0.5.1",
    "websocket-client==1.7.0",
    "yarg==0.1.9",
    "yolk3k==0.9",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
