[project]
name = "blog"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Krystian Safjan", email = "ksafjan@gmail.com" }]
dependencies = [
    "pelican>=4.11.0",
    "pylint>=3.3.6",
    "typogrify>=2.1.0",
    "Markdown>=3.7.0",
    "ipython>=9.1.0",
    "nbconvert>=7.16.6",
    "notebook>=7.3.3",
    "jinja2>=3.1.2",
    "beautifulsoup4>=4.12.2",
    "pyment>=0.3.3",
    "appnope>=0.1.3",
    "pelican-obsidian",
    "pelican-jupyter",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

[tool.uv.sources]
pelican-obsidian = { git = "https://github.com/izikeros/pelican-obsidian" }
pelican-jupyter = { git = "https://github.com/izikeros/pelican-jupyter" }

