[project]
name = "blog"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Krystian Safjan", email = "ksafjan@gmail.com" }]
dependencies = [
    "appnope>=0.1.3",
    "beautifulsoup4>=4.12.2",
    "ipython>=9.1.0",
    "jinja2>=3.1.2",
    "markdown-mermaidjs>=2.0.0",
    "Markdown>=3.7.0",
    "nbconvert>=7.16.6",
    "notebook>=7.3.3",
    "pelican-featured-image>=1.1.0",
    "pelican-jupyter",
    "pelican-more-categories>=0.1.0",
    "pelican-neighbors>=1.2.0",
    "pelican-obsidian",
    "pelican-related-posts>=1.0.0",
    "pelican-render-math>=1.0.4",
    "pelican-series>=3.0.0",
    "pelican-share-post>=1.2.1",
    "pelican-simple-footnotes>=1.0.3",
    "pelican-sitemap>=1.2.1",
    "pelican-yaml-metadata>=2.1.2",
    "pelican>=4.11.0",
    "pylint>=3.3.6",
    "pyment>=0.3.3",
    "python-markdown-math>=0.9",
    "pytz>=2025.2",
    "typogrify>=2.1.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

[tool.uv.sources]
pelican-obsidian = { git = "https://github.com/izikeros/pelican-obsidian" }
pelican-jupyter = { git = "https://github.com/izikeros/pelican-jupyter" }

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "pytest>=8.4.2",
]

