[project]
name = "2021-09-13-Interactive_plots_for_blogging"
version = "0.1.0"
description = "Notebook project"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "plotly>=5.15.0",
    "jinja2>=3.1.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "bokeh>=3.8.2",
    "altair>=6.0.0",
    "vega-datasets>=0.9.0",
]

[tool.uv]
dev-dependencies = []
