[project]
name = "2026-01-08-ragas-in-mlfow-rag-eval-demo"
version = "0.1.0"
description = "RAG Evaluation with RAGAS metrics via MLflow - comprehensive tutorial"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "mlflow>=3.8.1",
    "ragas>=0.4.2",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "faiss-cpu>=1.7.4",
    "openai>=1.50.0",
    "tiktoken>=0.7.0",
    "pandas>=2.0.0",
    "litellm>=1.40.0",
]

[dependency-groups]
dev = []
